--- a/src/styles/rin.css
+++ b/src/styles/rin.css
@@ -1,3 +1,5 @@
+
+
 .hPic {
     background-image: url("../assets/pictures/bookback.jpg");
     background-repeat: no-repeat;
@@ -8,6 +10,7 @@
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
 
 }
+´
 
 
 .search {
