--- a/src/styles/vic.css
+++ b/src/styles/vic.css
@@ -17,7 +17,7 @@
 html {
   overflow: auto;
   position: relative;
-  bottom: 60px;
+  bottom: 4vh;
 
   scroll-behavior: smooth;
 
@@ -49,24 +49,28 @@ html {
 
 }
 
+.trust{
+    padding-bottom: 4em;
+}
+
 .sorting button {
   border: 1px solid #008b8bcb;
   color: #008b8b;
 }
 
-.rev {
+.rev, .trustP {
   min-width: 100%;
   border-radius: 15px;
   padding: 5%;
   background-color: #EEF9FF;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
-
+/*
 .gMap {
   height: 60vh;
   width: 100vw;
-  /*position: relative;*/
-}
+  /*position: relative;
+}*/
 
 .map-container, .sp {
   height: 100%;
