flere kort på forsie

--- a/src/styles/vic.css
+++ b/src/styles/vic.css
@@ -121,3 +121,10 @@ html {
   justify-content: center;
 
 }
+
+.inspo{
+  display:flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+}
